Javascript clean-up. Fixed a bug when the stale tiles and the new ones would overlap when zooming.

--- a/app/static/scatter.css
+++ b/app/static/scatter.css
@@ -33,7 +33,6 @@ div#container {
 
 .dot {
   stroke: none;
-  fill-opacity: .5;
 }
 
 .d3-tip {
